Export com.ibm.lang.management.internal to access metrics (#20593)
Due to inaccessible com.ibm.lang.management.internal package, 
some tests were failing on IBM Semeru 16 and 17